RESOLVED FIXED58274
REGRESSION (r83081): Esc key no longer removes current Kotoeri text operation
https://bugs.webkit.org/show_bug.cgi?id=58274
Summary REGRESSION (r83081): Esc key no longer removes current Kotoeri text operation
Alexey Proskuryakov
Reported 2011-04-11 14:57:43 PDT
I fail as a reviewer.
Attachments
proposed fix (1.52 KB, patch)
2011-04-11 14:59 PDT, Alexey Proskuryakov
mitz: review+
Alexey Proskuryakov
Comment 1 2011-04-11 14:58:24 PDT
Alexey Proskuryakov
Comment 2 2011-04-11 14:59:25 PDT
Created attachment 89097 [details] proposed fix
Alexey Proskuryakov
Comment 3 2011-04-11 15:18:43 PDT
Note You need to log in before you can comment on or make changes to this bug.