        Reviewed by Dan Bernstein.

REGRESSION (r83081): Esc key no longer removes current Kotoeri text operation
        https://bugs.webkit.org/show_bug.cgi?id=58274
        <rdar://problem/9263683>

        * WebProcess/WebPage/mac/WebPageMac.mm: (WebKit::WebPage::getMarkedRange): Wrap the returned
        temporary in RefPtr.



Canonical link: https://commits.webkit.org/73280@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83516 268f45cc-cd09-0410-ab3c-d52691b4dbfc